fixed quicktips modal z-index

--- a/public/client/less/search.less
+++ b/public/client/less/search.less
@@ -6,6 +6,7 @@
 @import 'search/download.less';
 @import 'search/mapping.less';
 @import 'idbmap.less';
+
 i.spinner{
     width:16px;
     height:16px;
@@ -70,6 +71,9 @@ input::-webkit-input-placeholder{
         margin:0px 10px;
         h3:first-of-type{
             margin-top:10px;
+        }
+        #search-help .modal-dialog{
+            z-index: 1040;
         }
     }
     .checkbox{
